# gotrek

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  README  configure  configure.ac  lang.txt
chomik/: Makefile  Makefile.am  Makefile.in  actions_check_whether.chomik  actions_on_it_is_some_action.chomik  decisions.chomik  decisions_make.chomik  decisions_perform.chomik  end_of_the_game.chomik  game_phases.chomik  global_streams.chomik  global_variables.chomik  notify_gotrek.chomik  persons.chomik  persons_attributes.chomik  persons_auxilliary_variables.chomik  persons_decisions_classes.chomik  persons_decisions_generate.chomik  persons_informations_attributes.chomik  persons_initialize.chomik  persons_random_generators.chomik  persons_relationships.chomik  persons_relationships_initialize.chomik  persons_relationships_update.chomik  persons_reset.chomik  persons_rules.chomik  persons_update.chomik  places.chomik  places_attributes.chomik  places_relationships.chomik  places_update.chomik  resolve_the_events.chomik  skipping_gotrek_decisions.chomik  successors.chomik  user_defined_types.chomik
font/: Makefile  Makefile.am  Makefile.in
generators/: Makefile  Makefile.am  Makefile.in  create_correctness_info.chomik  create_translations.chomik  create_translations_1.chomik  create_translations_2.chomik  process_translations_for_actions.chomik  process_translations_for_informations.chomik  write_translations_files.chomik
image/: Makefile  Makefile.am  Makefile.in
scripts/: Makefile  Makefile.am  Makefile.in  game_init.sdl_chomik  generate_Gotrek_possible_decisions_answering.chomik  list_all_actions.chomik  (+6 more)
tests/: Makefile  Makefile.am  Makefile.in  check_Gotrek_proposes_Pregor_to_exchange_weapons.chomik  check_how_Gotrek_tells_Pregor_he_is_a_liar.chomik  check_how_Gotrek_tells_Pregor_he_is_not_a_liar.chomik  check_skipping_Gotrek_decisions.chomik  check_skipping_Gotrek_decisions2.chomik  check_the_amount_of_actions.chomik  check_the_amount_of_informations.chomik  check_the_game_initialization.chomik  check_what_Pregor_believes_Gotrek_has_asked_him_about_being_a_liar.chomik  check_what_Pregor_believes_Gotrek_has_asked_him_about_his_function.chomik  check_what_Pregor_believes_Gotrek_has_asked_him_about_his_weapon.chomik  check_what_Pregor_believes_Gotrek_has_proposed_him_to_exchange_weapons.chomik  check_whether_Gotrek_can_answer_Pregor_whether_I_am_a_liar_false.chomik  check_whether_Gotrek_can_answer_Pregor_whether_I_am_a_liar_false2.chomik  check_whether_Gotrek_can_answer_Pregor_whether_I_am_a_liar_true.chomik  check_whether_Gotrek_can_answer_Pregor_whether_I_am_a_liar_true2.chomik  check_whether_Gotrek_can_attack_Gotrek.chomik  check_whether_Gotrek_can_go_from_Krakow_to_Poznan.chomik  check_whether_Gotrek_can_go_from_Krakow_to_Warszawa.chomik  check_whether_Gotrek_will_be_notified_about_Pregor_help.chomik  check_whether_Pregor_helps_Gotrek_against_Gerrudir_1.chomik  check_whether_Pregor_helps_Gotrek_against_Gerrudir_2.chomik  check_whether_the_weapon_exchange_works.chomik  check_whether_we_can_fail.chomik
(+31 files in other folders)
