#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([gotrek], [0.0.2], [pawel.f.biernacki@gmail.com])
AM_INIT_AUTOMAKE()

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 chomik/Makefile
                 font/Makefile
                 generated/Makefile
                 generators/Makefile
                 image/Makefile
                 scripts/Makefile
                 sdl_chomik/Makefile
                 tests/Makefile])
AC_OUTPUT
