
EXTRA_DIST = *.chomik


TESTS = check_whether_we_can_fail.chomik \
	check_the_amount_of_informations.chomik \
	check_the_amount_of_actions.chomik \
	check_whether_Gotrek_can_go_from_Krakow_to_Warszawa.chomik \
	check_whether_Gotrek_can_go_from_Krakow_to_Poznan.chomik \
	check_whether_Gotrek_can_answer_Pregor_whether_I_am_a_liar_true.chomik	\
	check_whether_Gotrek_can_answer_Pregor_whether_I_am_a_liar_true2.chomik \
	check_whether_Gotrek_can_answer_Pregor_whether_I_am_a_liar_false.chomik \
	check_whether_Gotrek_can_answer_Pregor_whether_I_am_a_liar_false2.chomik \
	check_how_Gotrek_tells_Pregor_he_is_a_liar.chomik \
	check_how_Gotrek_tells_Pregor_he_is_not_a_liar.chomik \
	check_what_Pregor_believes_Gotrek_has_asked_him_about_being_a_liar.chomik \
	check_what_Pregor_believes_Gotrek_has_asked_him_about_his_weapon.chomik \
	check_what_Pregor_believes_Gotrek_has_asked_him_about_his_function.chomik \
	check_what_Pregor_believes_Gotrek_has_proposed_him_to_exchange_weapons.chomik \
	check_Gotrek_proposes_Pregor_to_exchange_weapons.chomik \
	check_skipping_Gotrek_decisions.chomik \
	check_skipping_Gotrek_decisions2.chomik \
	check_the_game_initialization.chomik \
	check_whether_Gotrek_can_attack_Gotrek.chomik \
	check_whether_Pregor_helps_Gotrek_against_Gerrudir_1.chomik \
	check_whether_Pregor_helps_Gotrek_against_Gerrudir_2.chomik
	

XFAIL_TESTS = check_whether_we_can_fail.chomik	\
	check_the_game_initialization.chomik


